--- a/page.html
+++ b/page.html
@@ -15,6 +15,9 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script> 
 
+       <!-- Email JS  -->
+      <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+
       <title>Professional Portfolio Template</title>
   </head>
   <body>
@@ -85,17 +88,17 @@
                     <form class="contact-form" id="contact-form">
                         <div class="contact-form__inputs-field">
                             <div class="input-box">
-                                <input type="text" class="text-input" name="name" placeholder="Name" required/>
+                                <input type="text" id="name-input" class="text-input" name="name" placeholder="Name" required/>
                             </div>
                             <div class="input-box">
-                                <input type="email" class="text-input" name="email" id="email" placeholder="Email" required />
+                                <input type="email" id="email-input" class="text-input" name="email" placeholder="Email" required />
                             </div>
                         </div>
                         <div class="input-box">
-                            <textarea name="text" class="message" placeholder="Message..." required></textarea>
+                            <textarea name="text" id="message-input" class="message" placeholder="Message..." required></textarea>
                         </div>
 
-                        <button type="submit" class="submit-btn" id="submit">Button</button>
+                        <button type="submit" class="submit-btn" id="submit">Submit</button>
                     </form>
                 </section>
 
